--- a/www/category.html
+++ b/www/category.html
@@ -3,17 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Dòng sản phẩm</title> 
-		<link rel="stylesheet" href="css/style.css"/>
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
-		<script type="text/javascript" charset="utf-8" src="js/cordova.js"></script> 
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>	
-		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
-		<script type="text/javascript" src="js/demo.js"></script>
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+		<link rel="stylesheet" href="css/style.css"/> 
+		<script type="text/javascript" charset="utf-8" src="js/cordova.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+		<script type="text/javascript" src="js/main.js"></script> 
 	</head>
 	
 	<body>
 		<!-- page home-->
-		<div data-role="page" id="home1">
+		<div data-role="page">
 			<div data-role="header" data-postion="fixed">
 				<a href="home.html" data-role="button" data-icon="home"  data-theme="a" data-inline="true">Home</a>
 				<h1>
@@ -26,7 +26,7 @@
 					<img id="banner" style="width: 400px; height: 200px" src="http://chutin.vn/ClientPath/EStore/WebUser_37407/BANNER_NAGA.jpg"></div>
 				</div>
 				
-				<a href="maytinhban.html" data-role="button" data-theme="b">Điện tử</a>
+				<a href="#" onclick="goDesktop()" data-role="button" data-theme="b">Điện tử</a>
 				<a href="tulanh.html" data-role="button" data-theme="b">Điện lạnh</a>
 			<!--	<a href="" data-role="button" data-theme="b">Khuyến mãi</a>-->
 				
