--- a/www/home.html
+++ b/www/home.html
@@ -4,12 +4,12 @@
 		<meta charset="utf-8">
 		<title>Shooping Mini</title> 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+		<link rel="stylesheet" href="css/style.css"/> 
 		<script type="text/javascript" charset="utf-8" src="js/cordova.js"></script>
-		<link rel="stylesheet" href="css/style.css"/>
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" /> 
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
-		<script type="text/javascript" src="js/demo.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+		<script type="text/javascript" src="js/main.js"></script> 
 		
 		<style>
 			.segmented-control { text-align:center;}
@@ -31,14 +31,14 @@
 	<div data-role="content">
 	
 		<div style=" text-align:center" id="banner">
-            <img id="banner" style="width: 400px; height: 200px" src="http://chutin.vn/ClientPath/EStore/WebUser_37407/BANNER_NAGA.jpg"></div>
+            <img id="banner" style="width: 400px; height: 200px" src="images/banner.jpg"></div>
         </div>
 		
 		<div class="ui-grid-a">
 			
 			<div class="ui-block-a">
 			  	<div style="position:content; bottom: 0; width:100%;  text-align:center">
-			   		<a href="category.html">
+			   		<a href="#" onclick="goCategory()">
 				  		<img src="images/products.png" alt="Now Playing">
 				  		<span class="icon-label">Products</span>
 			    	</a>
