--- a/www/category.html
+++ b/www/category.html
@@ -15,7 +15,7 @@
 		<!-- page home-->
 		<div data-role="page">
 			<div data-role="header" data-postion="fixed">
-				<a href="home.html" data-role="button" data-icon="home"  data-theme="a" data-inline="true">Home</a>
+				<a href="#" onclick="goBack()" data-role="button" data-icon="home"  data-theme="a" data-inline="true">Home</a>
 				<h1>
 					Dòng sản phẩm
 				</h1>
@@ -27,7 +27,7 @@
 				</div>
 				
 				<a href="#" onclick="goDesktop()" data-role="button" data-theme="b">Điện tử</a>
-				<a href="tulanh.html" data-role="button" data-theme="b">Điện lạnh</a>
+				<a href="#" onclick="goFridge()" data-role="button" data-theme="b">Điện lạnh</a>
 			<!--	<a href="" data-role="button" data-theme="b">Khuyến mãi</a>-->
 				
 			</div>
