--- a/www/maytinhbang.html
+++ b/www/maytinhbang.html
@@ -12,7 +12,7 @@
 	<body onload="readDatabasesTablet()">
 		<div data-role="page">
 	        <div data-role="header">
-				<a href="category.html" data-role="button" data-icon="back"  data-theme="a" data-inline="true">Back</a>
+				<a href="#" onclick="goCategory()" data-role="button" data-icon="back"  data-theme="a" data-inline="true">Back</a>
 	            <h1>
 	                Điện tử
 	            </h1>
