--- a/www/home.html
+++ b/www/home.html
@@ -38,7 +38,7 @@
 			
 			<div class="ui-block-a">
 			  	<div style="position:content; bottom: 0; width:100%;  text-align:center">
-			   		<a href="#" onclick="goCategory()">
+			   		<a href="#" onclick="goDesktop()">
 				  		<img src="images/products.png" alt="Now Playing">
 				  		<span class="icon-label">Products</span>
 			    	</a>
