--- a/www/dieuhoa.html
+++ b/www/dieuhoa.html
@@ -15,7 +15,7 @@
 			<div data-role="header" data-theme="d">
 				<h1>Dòng sản phẩm</h1>
 				<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
-				<!--<a href="#add-form" data-icon="plus" data-iconpos="notext">Add</a>-->
+				<a href="#" onclick="goHome()" data-icon="home" data-iconpos="notext" data-direction="reverse">Home</a>
 				
 				<div data-role="navbar">
 					<ul>
@@ -27,9 +27,9 @@
 	            </div>
 			</div><!-- /header -->
 			<div data-role="content">
-				<div class="content-primary" id="dieuhoa"> 
-						<!-- <ul  data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Search..." >
-						</ul>  -->
+				<div class="content-primary" > 
+					<ul id="dieuhoa"  data-inset="true" data-filter="true" data-filter-placeholder="Search..." >
+					</ul>  
 				</div>
 			</div><!-- /content -->
 
