--- a/www/maygiat.html
+++ b/www/maygiat.html
@@ -12,7 +12,7 @@
 	<body onload="readDatabasesWasher()">
 		<div data-role="page" class="ui-responsive-panel">
 
-			<div data-role="header" data-theme="d">
+			<div data-role="header" data-theme="a">
 				<h1>Dòng sản phẩm</h1>
 				<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
 				<a href="#" onclick="goHome()" data-icon="home" data-iconpos="notext" data-direction="reverse">Home</a>
@@ -46,12 +46,13 @@
 				}
             </style>
 
-				<div data-role="panel" data-position="left" data-position-fixed="false" data-display="reveal" id="nav-panel" data-theme="b">
+				<div data-role="panel" data-position="left" data-position-fixed="false" data-display="reveal" id="nav-panel" data-theme="a">
 
-					<ul data-role="listview" data-theme="b" data-divider-theme="d" style="margin-top:-16px;" class="nav-search">
+					<ul data-role="listview" data-theme="d" data-inset="true" data-divider-theme="b" style="margin-top:-16px;" class="nav-search">
 						<li data-icon="delete" style="background-color:#111;">
 							<a href="#" data-rel="close">Close menu</a>
 						</li>
+						<li data-role="list-divider">Sản phẩm</li>
 						<li data-filtertext="wai-aria voiceover accessibility screen reader">
 							<a onclick="goDesktop()">Điện tử</a>
 						</li>
