--- a/www/maytinhban.html
+++ b/www/maytinhban.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>jQuery Mobile Demos - Slide Panel</title>
+		<title>Máy tính bàn</title>
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
 		<link rel="stylesheet" href="css/style.css"/> 
 		<script type="text/javascript" charset="utf-8" src="js/cordova.js"></script>
@@ -16,7 +16,7 @@
 	<body onload="readDatabasesDesktop()">
 		<div data-role="page" class="ui-responsive-panel">
 
-			<div data-role="header" data-theme="d">
+			<div data-role="header" data-theme="a">
 				<h1>Dòng sản phẩm</h1>
 				<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
 				<a href="#" onclick="goHome()" data-icon="home" data-iconpos="notext" data-direction="reverse">Home</a>
@@ -32,41 +32,29 @@
 			</div><!-- /header -->
 			<div data-role="content">
 				<div class="content-primary" > 
-					<ul id="maytinhban"  data-inset="true" data-filter="true" data-filter-placeholder="Search..." >
+					<ul id="maytinhban"  data-inset="true" data-filter="true" data-filter-placeholder="Search..." data-split-icon="gear" data-split-theme="d" >
 					</ul> 
 				</div>
 			</div><!-- /content -->
 
-			
-			
-			<style>
-				.nav-search .ui-btn-up-a {
-					background-image:none;
-					background-color:#333333;
-				}
-				.nav-search .ui-btn-inner {
-					border-top: 1px solid #888;
-					border-color: rgba(255, 255, 255, .1);
-				}
-            </style>
+			<div data-role="panel" data-position="left" data-position-fixed="false" data-display="reveal" id="nav-panel" data-theme="a">
 
-				<div data-role="panel" data-position="left" data-position-fixed="false" data-display="reveal" id="nav-panel" data-theme="b">
+				<ul data-role="listview" data-theme="d" data-inset="true" data-divider-theme="b" style="margin-top:-16px;" class="nav-search">
+					<li data-icon="delete" style="background-color:#111;">
+						<a href="#" data-rel="close">Close menu</a>
+					</li>
+					<li data-role="list-divider">Sản phẩm</li>
+					<li data-filtertext="wai-aria voiceover accessibility screen reader">
+						<a onclick="goDesktop()">Điện tử</a>
+					</li>
+					<li data-filtertext="wai-aria voiceover accessibility screen reader">
+						<a onclick="goFridge()">Điện lạnh</a>
+					</li>
+					
+				</ul>
 
-					<ul data-role="listview" data-theme="b" data-divider-theme="d" style="margin-top:-16px;" class="nav-search">
-						<li data-icon="delete" style="background-color:#111;">
-							<a href="#" data-rel="close">Close menu</a>
-						</li>
-						<li data-filtertext="wai-aria voiceover accessibility screen reader">
-							<a onclick="goDesktop()">Điện tử</a>
-						</li>
-						<li data-filtertext="wai-aria voiceover accessibility screen reader">
-							<a onclick="goFridge()">Điện lạnh</a>
-						</li>
-						
-					</ul>
-
-					<!-- panel content goes here -->
-				</div><!-- /panel -->
+				<!-- panel content goes here -->
+			</div><!-- /panel -->
 		</div><!-- /page --> 
 	</body>
 </html>
