--- a/www/maytinhban.html
+++ b/www/maytinhban.html
@@ -36,8 +36,8 @@
 	            </div>
 			</div><!-- /header -->
 			<div data-role="content">
-				<div class="content-primary" > 
-						<ul  id="maytinhban" data-split-icon="gear" data-inset="true" data-filter="true" data-filter-placeholder="Search..." >
+				<div class="content-primary" id="maytinhban" > 
+						<ul  data-role="listview" data-split-icon="gear" data-inset="true" data-filter="true" data-filter-placeholder="Search..." >
 						</ul> 
 				</div>
 			</div><!-- /content -->
