--- a/www/maytinhbang.html
+++ b/www/maytinhbang.html
@@ -31,9 +31,9 @@
 	            </div>
 			</div><!-- /header -->
 			<div data-role="content">
-				<div class="content-primary" > 
-					<ul id="maytinhbang" data-inset="true" data-filter="true" data-filter-placeholder="Search..." >
-					</ul>  
+				<div class="content-primary" id="maytinhbang" > 
+						<ul  data-role="listview" data-split-icon="gear" data-inset="true" data-filter="true" data-filter-placeholder="Search..." >
+						</ul> 
 				</div>
 			</div><!-- /content -->
 
