--- a/www/maygiat.html
+++ b/www/maygiat.html
@@ -27,9 +27,9 @@
 	            </div>
 			</div><!-- /header -->
 			<div data-role="content">
-				<div class="content-primary" > 
-					<ul id="maygiat"  data-inset="true" data-filter="true" data-filter-placeholder="Search..." >
-					</ul>  
+				<div class="content-primary" id="maygiat" > 
+						<ul  data-role="listview" data-split-icon="gear" data-inset="true" data-filter="true" data-filter-placeholder="Search..." >
+						</ul> 
 				</div>
 			</div><!-- /content -->
 
