--- a/www/maytinhcanhan.html
+++ b/www/maytinhcanhan.html
@@ -31,8 +31,8 @@
 	            </div>
 			</div><!-- /header -->
 			<div data-role="content">
-				<div class="content-primary" > 
-						<ul  id="maytinhcanhan" data-inset="true" data-filter="true" data-filter-placeholder="Search..." >
+				<div class="content-primary" id="maytinhcanhan" > 
+						<ul  data-role="listview" data-split-icon="gear" data-inset="true" data-filter="true" data-filter-placeholder="Search..." >
 						</ul> 
 				</div>
 			</div><!-- /content -->
