--- a/www/logout.html
+++ b/www/logout.html
@@ -19,32 +19,9 @@
  
 	<body >
 		 
-		<div data-role="page" id="page_login">
-
-			<div data-role="header">
-				<h1>Login</h1>
-			</div><!-- /header -->
-
-			<div data-role="content" class='content'>
-				<div>
-				  <label for="page_login_name">Tên đăng nhập</label>
-				  <input type="text" id="page_login_name" />
-				</div>
-				<div>
-				  <label for="page_login_pass">Mật khẩu</label>
-				  <input type="password" id="page_login_pass" />
-				</div>
-				<fieldset>
-				  <div><button type="button" data-theme="b" id="page_login_submit">Login</button></div>
-				</fieldset>
-			</div><!-- /content -->
-
-		</div><!-- /page -->
-		
-		
 		<div data-role="page" id="page_dashboard">
 
-			<script type="text/javascript" charset="utf-8" src="js/dashboard.js"></script>
+			<script type="text/javascript" charset="utf-8" src="dashboard.js"></script>
 
 			<div data-role="header">
 			   <h1>Dashboard</h1>
@@ -57,6 +34,5 @@
 
 		</div><!-- /page -->
 		 
-				 
 	</body>
 </html>
