--- a/www/mayghiam.html
+++ b/www/mayghiam.html
@@ -1,10 +1,10 @@
-﻿
+
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Máy tính cá nhân</title>
+		<title>Máy ghi âm</title>
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
 		<link rel="stylesheet" href="css/style.css"/> 
 		<link rel="stylesheet" href="css.css"/> 
@@ -15,16 +15,16 @@
 		<script type="text/javascript" src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 		<script type="text/javascript" src="js/addtocart.js"></script>
 		<script type="text/javascript"  src="js/jquery.livequery.js"></script>
-	<!--	<style>
+		<style>
 			#camera .ui-icon { background:  url(images/grid.png) 50% 50% no-repeat; background-size: 22px 20px; }
 			#tapeMachine .ui-icon { background:  url(images/grid.png) 50% 50% no-repeat; background-size: 25px 17px; }
 			#headPhone .ui-icon { background:  url(images/grid.png) 50% 50% no-repeat; background-size: 25px 17px; }
 			#phuKien .ui-icon { background:  url(images/grid.png) 50% 50% no-repeat; background-size: 22px 22px; }
-		</style>-->
+		</style>
 
 	</head>
 	
-	<body onload="readDatabasesLaptop() ">
+	<body onload="readDatabasesTapeMachine() ">
 		<div data-role="page" class="ui-responsive-panel" >
 
 			<div data-role="header" data-theme="b">
@@ -43,7 +43,7 @@
 				
 			</div><!-- /header -->
 			<div data-role="content">
-				<div class="content-primary" id="maytinhcanhan" > 
+				<div class="content-primary" id="mayghiam" > 
 						<ul  data-role="listview" data-split-icon="gear" data-split-theme="d" data-inset="true" data-filter="true" data-filter-placeholder="Search..." >
 											
 						</ul> <!--/end listview-->
@@ -77,13 +77,13 @@
 					<!-- Điện tử -->
 					<li data-role="list-divider" role="heading">Điện tử</li>
 					<li data-filtertext="wai-aria voiceover accessibility screen reader">
-						<a onclick="goCamera()">
+						<a onclick="goDesktop()">
 							<img src="images/107-widescreen.png" alt="cart" class="ui-li-icon">
 							Kĩ thuật số
 						</a>
 					</li>
 					<li data-filtertext="wai-aria voiceover accessibility screen reader">
-						<a onclick="goLaptop()">
+						<a onclick="goDesktop()">
 							<img src="images/107-widescreen.png" alt="cart" class="ui-li-icon">
 							Máy tính cá nhân
 						</a>
@@ -182,7 +182,7 @@
 				<!-- panel content goes here -->	
 			</div> <!--end panel -->
 			
-			<!-- tab bar with custom icons 
+			<!-- tab bar with custom icons -->
 			<div data-role="footer" class="tabbar" data-position="fixed">
 				<div data-role="navbar" class="tabbar">
 					<ul>
